deployment/gcp/vms-app-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: vms-app
  labels:
    name: vms-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: vms-app
  template:
    metadata:
      labels:
        app: vms-app
    spec:
      containers:
      - name: vms-app
        image: gcr.io/erwindev-vms/vms-app
        ports: 
          - containerPort: 5000
        readinessProbe:
          httpGet:
            path: /u/v1/app/health
            port: 5000
          periodSeconds: 10
          timeoutSeconds: 5
          successThreshold: 1
          failureThreshold: 2
        livenessProbe:
          httpGet:
            path: /u/v1/app/health
            port: 5000
          initialDelaySeconds: 120
          periodSeconds: 30
          timeoutSeconds: 3          
      - name: cloudsql-proxy
        image: gcr.io/cloudsql-docker/gce-proxy:1.16
        command: ["/cloud_sql_proxy",
          "-instances=erwindev-vms:us-east1:vms-app-db-01=tcp:5432",
          "-credential_file=/secrets/cloudsql/sql_credentials.json"]
        volumeMounts:
          - name: my-secrets-volume
            mountPath: /secrets/cloudsql
            readOnly: true
      volumes:
        - name: my-secrets-volume
          secret:
            secretName: vms-cloudsql-instance-credentials
