deployment/gcp/vms-app-loadbalancer.yml
apiVersion: v1
kind: Service
metadata:
  name: vms-app
spec:
  selector:
    app: vms-app
  type: LoadBalancer
  ports:
  - port: 80
    targetPort: 5000
