deployment/gcp/vms-app-service-nodeport.yml
apiVersion: v1
kind: Service
metadata:
  name: vms-app-svc
spec:
  selector:
    app: vms-app
  type: NodePort
  ports:
  - port: 5000
    protocol: TCP
    name: vms-app-port
