deployment/gcp/vms-app-service.yml
apiVersion: v1
kind: Service
metadata:
  name: vms-app
  labels:
    service: vms-app
spec:
  selector:
    app: vms-app
  ports:
  - port: 5000
    targetPort: 5000
  type: LoadBalancer
